<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="200"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="200"
        android:title="@string/menu_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_log_out"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:orderInCategory="200"
        android:title="@string/menu_log_out"
        app:showAsAction="ifRoom" />

</menu>