<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:background="@color/colorSecondary"
    android:padding="20dp"
    tools:context=".login_register.RegistrationActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/find"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_firstName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:gravity="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_lastName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:gravity="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:gravity="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_gravity="center_horizontal"
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorPrimaryDark"
                android:text="@string/registration_button"
                android:layout_gravity="center"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewLoginLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/text_member"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>